# engine-chromatique

./: .clang-format  CMakeLists.txt  app.cpp  app.hpp
dependencies/include/GLFW/: glfw3.h
dependencies/include/glm/: common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vector_relational.hpp
dependencies/include/glm/detail/: _noise.hpp  _swizzle.hpp  _swizzle_func.hpp  _vectorize.hpp  compute_common.hpp  compute_vector_relational.hpp  func_common.inl  func_common_simd.inl  func_exponential.inl  func_exponential_simd.inl  func_geometric.inl  func_geometric_simd.inl  func_integer.inl  func_integer_simd.inl  func_matrix.inl  func_matrix_simd.inl  func_packing.inl  func_trigonometric.inl  func_vector_relational.inl  qualifier.hpp  setup.hpp  type_float.hpp  type_half.hpp  type_half.inl  type_mat2x2.hpp  type_mat2x2.inl  type_mat2x3.hpp  type_mat2x3.inl  type_mat2x4.hpp  type_mat2x4.inl  type_mat3x2.hpp  type_mat3x2.inl  type_mat3x3.hpp  type_mat3x3.inl  type_mat3x4.hpp  type_mat3x4.inl  type_mat4x2.hpp  type_mat4x2.inl  type_mat4x3.hpp  type_mat4x3.inl  (+15 more)
dependencies/include/glm/ext/: matrix_clip_space.hpp  matrix_clip_space.inl  matrix_common.hpp  matrix_common.inl  matrix_double2x2.hpp  matrix_double2x2_precision.hpp  matrix_double2x3.hpp  matrix_double2x3_precision.hpp  matrix_double2x4.hpp  matrix_double2x4_precision.hpp  matrix_double3x2.hpp  matrix_double3x2_precision.hpp  matrix_double3x3.hpp  matrix_double3x3_precision.hpp  matrix_double3x4.hpp  matrix_double3x4_precision.hpp  matrix_double4x2.hpp  matrix_double4x2_precision.hpp  matrix_double4x3.hpp  matrix_double4x3_precision.hpp  matrix_double4x4.hpp  matrix_double4x4_precision.hpp  matrix_float2x2.hpp  matrix_float2x2_precision.hpp  matrix_float2x3.hpp  matrix_float2x3_precision.hpp  (+141 more)
include/: engine.hpp  surface.hpp  swapchain.hpp
src/: engine.cpp  engine.hpp  world.cpp  world.hpp
src/vulkan_rhi/: command_pool.cpp  command_pool.hpp  device.cpp  device.hpp  surface.hpp  swapchain.hpp
(+160 files in other folders)
